--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="secondary_black">#29293d</color>
+    <color name="link_blue">#0000ff</color>
 
     <color name="grey">#bfbfbf</color>
 </resources>
