this is android project

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="link_blue">#0000ff</color>
 
     <color name="grey">#bfbfbf</color>
+    <color name="colorAccent">#E91E63</color>
 </resources>
